--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,14 @@ APP_KEY=XkA9tVpv0B6FvG-924imEqbB5btpqLMi
 DRIVE_DISK=local
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
+DB_CONNECTION=mysql
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
+PG_HOST=127.0.0.1
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
